objects/ASI_TH_CRM_Sell_in__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_FOC_Qty_9L__c</fullName>
        <formula>ASI_TH_CRM_FOC_Qty__c *  ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c  / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Qty (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty_9L__c</fullName>
        <formula>ASI_TH_CRM_Qty__c *  ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c  / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sellin_Amount__c</fullName>
        <label>Sell-in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sell-ins</relationshipLabel>
        <relationshipName>Sell_ins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_FOC_Qty__c</fullName>
        <label>FOC Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_GL_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sell_in_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sell-in External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Sell-ins</relationshipLabel>
        <relationshipName>Sell_ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sell-in</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI{YY}{MM}{0000}</displayFormat>
        <label>Sell-in Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sell-ins</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Sell_in</fullName>
        <active>true</active>
        <label>ASI TH CRM Sell-in</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>